--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: "Blog Title"
-author: "Blog Author"
-description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
+title: "Qian Lin"
+author: "Qian Lin"
+description: "Not yet"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
-date_format: "%B %d, %Y"
+date_format: "June 2022"
 
 # Layout
 
