--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: "Not yet"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
-date_format: "June 2022"
+date_format: "%B %d, %Y"
 
 # Layout
 
